--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,9 +1,12 @@
 .button{
-    background-color: black;
-    color: var(--green-color);
+    background-color:var(--color-black);
+    color: var(--color-primary);
     padding: 10px 16px 10px 16px;
     width: fit-content;
     border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .button:hover{
