--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -13,7 +13,6 @@
   align-items: stretch;
   height: 48px;
 }
-
 .searchButton {
   border-radius: 0px 8px 8px 0px;
   padding: 14px 20px;
@@ -22,6 +21,12 @@
   border-left: none;
   cursor: pointer;
   height: 100%;
+  /* box-sizing: border-box; */
+}
+.searchButton img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
 }
 
 .listElement {
